--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         // ==========================================
         // 請貼上你的 CSV 連結
         // ==========================================
-        const CSV_URL = '請在這裡貼上你的CSV連結'; 
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSRN8TqorraKVjJ3FGYpndM6aUQFQcor-4TzrIG_smGY42hTgteuLL_lvGNMKj1wcYPQ70WMz-iWMpA/pubhtml'; 
         // ==========================================
 
         let globalData = [];
